--- a/blogpessoal/pom.xml
+++ b/blogpessoal/pom.xml
@@ -15,7 +15,7 @@
 	<name>blogpessoal</name>
 	<description>Projeto Blog Pessoal desenvolvido no bootcamp da Generation</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -68,6 +68,17 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.10</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-ui</artifactId>
+			<version>1.6.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
